# oxitty

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: README.md  memory_profile_test.rs  ordering_test.rs  parallelism_test.rs  performance_test.rs
src/: app.rs  colors.rs  error.rs  event.rs  lib.rs  state.rs  tui.rs
