[package]
name = "oxitty"
version = "0.1.0"
edition = "2021"
description = "An opinionated TUI framework for Rust"
authors = ["@ovnanova"]
license = "MPL-2.0"
repository = "https://github.com/v01dlabs/oxitty"

[dependencies]
async-channel = "2.1"
atty = "0.2.14"
crossterm = "0.28.1"
futures-lite = "2.1"
miette = { version = "7.2", features = ["fancy"] }
owo-colors = "4.0"
ratatui = "0.29.0"
smol = "2.0.2"

[dev-dependencies]
criterion = "0.5.1"
dhat = "0.3.3"
pretty_assertions = "1.4"

[[bench]]
name = "memory_profile_test"
harness = false

[[bench]]
name = "performance_test"
harness = false

